--- a/HTML/GLOBAL/global.css
+++ b/HTML/GLOBAL/global.css
@@ -1,25 +1,15 @@
-/*Ajustar tamaño de todas las cajas*/
+
 *{
     box-sizing: border-box;
 }
 
-
-/*Estilo de fuentes en todo el cuerpo de la página: cambria y todo en negrita (bold) y de color azul*/
-
 body{
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-color:blue;
+    color:blue;
     font-weight: bold;
+    margin: 0;
 }
 
-/*Barra de nevagcion, cabecera, contendor y pie de página, deben de tener un ancho máximo de 12000x.Centrar horizontalmente estos elementos*/
-
-
-/*Barra de navegacion con color de fondo azul, color de letra rosa
-Tamaño de letra 1.4 em
-Padding 10px
-Debe responder a scroll, pero no desaparecer de la página (se queda pegada al extremo superior)
-*/
 
 nav {
     background-color: rgb(11, 11, 105);
@@ -31,8 +21,6 @@ nav {
 }
 
 
-/*Elementos de la barra de navegacion*/
-
 .navegacion {
     color: rgb(192, 121, 145);
     margin: 15px;
@@ -40,7 +28,7 @@ nav {
 
 img{
     width: 100%;
-    position: relative;
+    position: static;
 }
 
 .enlace {
@@ -50,154 +38,69 @@ img{
     background: url(/pista.jpg);
 }
 
-
-/*Estilos de la cabecera: posicionada y centrada*/
-
-
-
-
-
-
-/*Banner compra aqui
-Color de fondo y de letra el mismo que antes
-Se debe posicionar respecto a su padre
-Separada un 15% de su derecha y un 30% de arriba
-Con un ancho del 20%
-*/
-
-
-
-
-
-
-
-
-/*
-El enlace del banner debe de cambiar de color cuando pasar el ratón por encima
-*/
-
-
-
-
-
-
-
-
-/*
-El elemento principal, esta centrado horizontalmente. Tiene un ancho del 80%
-*/
-
-
-
-
-
-
-/*Kineas de separacion, despues del h1 del main y despues del main*/
-
-
-
-
-
-
-/*Manejo de desbordamiento (el main es mas pequeño que su contenido)*/
-
-
-
-
-
-/*Colocación de cada uno de los divs de las imagenes de la Federacion de Padel*/
-
-
-
-
-
-
-/*Ajuste de ancho a 189px y alto a 265px de las imagenes de los fip-item*/
-
-
-
-
-
-
-/*
-La seccion de las palas se ajusta al 70% del ancho de su contenedor padre
-centrada horizontalmente
-Se debe manejar el desbordamiento en altura
-*/
-
-
-
-
-
-
-/*Se deben de colocar los elementos de tal forma que floten con respecto a la imagen
-La imagen tiene un ancho del 20% y guarda un margen izquierdo del 10%
-*/
-
-
-
-
-
-
-/*Los elementos que hay dentro de la seccion, flotan con la imagen
-Tienen un margen superior del 20% y un ancho del 50%
-El texto está justificado
-*/
-
-
-
-
-
-
-
-/*La primera linea de texto que hay en los div que estan en la clase pala, deben de ser:
-el doble de grandes de la fuente
-del color rosa usado previamente
-en negrita
-recuadrados solamante en el borde derecho e inferior con bordes de 1px, continuo y de color azul,
-ademas deben de guardar un margen derecho (continuacion de línea) de 10px y padding derecho de 10px*/
-
-
-
-
-
-
-
-
-/*La galeria de imagenes debe de estar centrada horizontalmente (guarda 20px de margen superior e inferior)
-Manejo de desbordamiento en altura
-Tiene un ancho del 70%
-*/
-
-
-
-
-
-/*Colocacion de las imagenes de la galeria que deben de tener un ancho cada una del 20%*/
-
-
-
-
-
-
-
-
-/*Estilos del pie de pagina, es un elemento NO flotante
-Manejo de desbordamiento*/
-
-
-
-
-
-
-
-
-/*Estilos del div de la direccion. Definir altura y anchura*/
-
-
-
-
-
-
-
-/*Colocar y dimensionar adecuadamente el icono de la red social de instagram*/
+p {
+    position: absolute;
+    top: 15%;
+    left: 70%;
+    color: #d87093;
+    padding-left: 20px;
+    padding-right: 20px;
+    
+}
+
+.enlace{
+    background-color: blue;
+    color: palevioletred;
+    border-radius: 10px;
+
+}
+
+
+/* Resultado 2 */
+
+h3{
+    text-align: center;
+    color: black;
+}
+
+.contenedor{
+    position: absolute;
+}
+
+.linea-roja{
+    margin-left: 30%;
+    margin-right: 30%;
+    border: 1px solid black;
+    border-color: red;
+}
+
+.imagenes img{  
+    width: 189px;
+    height: 265px;
+}
+
+.imagenes{
+    float: left;
+    padding: 20px;
+    align-items: center;
+
+}
+
+.imagenes p {
+
+    margin-top: 10px;
+    font-size: 1em;
+    color: #333;
+    display: block;
+    margin: auto;
+}
+
+
+.linea-roja2{
+    display: block;
+    top: 50%;
+    margin-left: 30%;
+    margin-right: 30%;
+    border: 1px solid black;
+    border-color: red;
+}
