--- a/HTML/Vuelta_2/2_Selectores - Ejercicio/Selectores2.css
+++ b/HTML/Vuelta_2/2_Selectores - Ejercicio/Selectores2.css
@@ -1,37 +1,65 @@
 /* Centra en la página el texto del título */
+#titulo{
+    text-align: center;
+}
+table{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
+table{
+    border-collapse: collapse;
+}
 
+th, td{
+    border: solid 1px black;
+}
 
 /* Da a todas las imágenes el mismo tamaño 50x50px */
 
-
+img{
+    width: 50px;
+    height: 50px;
+}
 
 
 
 /*Utilizando clases y una regla de selección haz que todas las celdas con texto de la primera columna
 tengan fondo rojo y letra blanca*/
 
-
+.rojo{
+    background-color: red;
+}
 
 
 
 /* Añadiendo sólo un id a la fila de la celda donde pone "Capacidad" y dando clase a las celdas con "GB" 
 cambiar el tamaño de la letra centrar el texto y poner el fondo gris */
 
-
-
+.gb{
+    font-size: 1em;
+    text-align: center;
+    background-color: grey;
+    padding: 20px;
+}
 
 /* Añadiendo sólo un id a la fila que las contiene añade estilos a los elementos de la lista que están dentro de
 esa fila para ponerles color de texto rojo*/
 
 
-
+td li{
+    color: red;
+}
 
 
 /*Utilizando un id aumenta el padding superior e inferior a la celda en la que pone "5 horas" y dale fondo amarillo*/
 
 
-
+#cinco{
+    padding: 20px;
+    background-color: yellow;
+}
 
 
 /* Dar lo estilos adecuados para poner un borde simple colapsado y centrar la tabla */
@@ -41,3 +69,8 @@ esa fila para ponerles color de texto rojo*/
 
 
 /* Dar color de fondo azul a todas las celdas que tiene colspan="2" o colspan="3"*/
+
+[colspan="2"],
+[colspan="3"] {
+  background-color: blue;
+}
