--- a/HTML/RA3/3.2/Transiciones/transiciones.css
+++ b/HTML/RA3/3.2/Transiciones/transiciones.css
@@ -12,20 +12,88 @@ Cambia tres propiedades más a tu elección.
 
 
 En la parte superior de la página generar un menú (Inicio, Quienes somos, Productos y Contacto) horizontal.
-Se debe de crear una línea horizontal de colores diferentes encima de cada elemento. El fondo del menú es de color negro. Se debe de incluir una transición para cambiar el ancho de esa línea al 100% del contenedor de forma gradual*/ 
+Se debe de crear una línea horizontal de colores diferentes encima de cada elemento. El fondo del menú es de color negro. 
+Se debe de incluir una transición para cambiar el ancho de esa línea al 100% del contenedor de forma gradual*/ 
 
+/*-----------------Animaciones--------------------------- */
+.menu:after, .menu  span  span {
+    display: block;
+    text-align: center;
+    border-radius: 0em;
+    padding: 2em 0 1.5em;
+  }
+
+.menu > span > span{
+    width: 100%;
+    display: block;
+    text-align: center;
+    color: #fff;
+    background-color: #000;
+  }
+
+ 
+.menu:after {
+    content: attr(data-title);
+    width: 100%;
+    background: #000;
+    color: #fff; 
+  }
+.menuinicio{
+    border-top: solid 6px green ;
+    padding: 15px;
+    transition: border-bottom 2s ease;
+    color: white;
+}
+
+.menuinicio:hover{
+    border-bottom: 100px solid green;
+    height: 30px;
+    margin: 0 auto;
+}
+
+
+
+.menuqsomos{
+    border-top: solid 6px rgb(223, 71, 159) ;
+    padding: 15px;
+}
+
+.productos{
+    border-top: solid 6px rgb(13, 11, 114) ;
+    padding: 15px;
+}
+
+.contacto{
+    border-top: solid 6px rgb(180, 47, 47) ;
+    padding: 15px;
+}
+/* .menuinicio{
+    padding: 20px;
+    background-color: red;
+    margin: 50px auto 0;
+    transition: background-color 2s ease;
+}
+
+.menuinicio:hover{
+    background-color: green;
+    margin: 0 auto;
+} */
+    
+
+/*-------------------------------------------- */
 ul{
     display: flex;
     justify-content: center;
     background-color: black;
     padding: 20px;
+    list-style: none;
+    margin-top: 10em;
 }
 
 span{
     margin: 10px;
 }
 
-/*-------------------------------------------- */
 
 main div{
     display: inline-block;
@@ -53,6 +121,8 @@ div:hover{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color: black;
 }
+
+
 
 /*-------------------------------------------- */
 .cont1{
@@ -141,4 +211,7 @@ div:hover{
 }
 .cont10:hover{
     background-color: darkorchid;
+}
+a{
+    text-decoration: none;
 }
