--- a/HTML/PRACTICA_EVALUABLE/index.css
+++ b/HTML/PRACTICA_EVALUABLE/index.css
@@ -9,16 +9,25 @@
 body {
     font-family: Arial, sans-serif;
     background-color: #f1f1f1;
-    color: #333;
+    
 }
+
+main{
+    position: relative;
+    z-index: -1;
+}
+
 
 /* ---------------------------------------CABECERA--------------------------------------- */
 header {
     position: fixed;
-    text-align: center;
     width: 100%;
     height: 80px;
-    background-color: transparent; 
+    
+}
+
+.scroll-change{
+    color:black;
 }
 
 /*-------Logo-------*/
@@ -43,22 +52,26 @@ header {
 }
 
 /*-------Categoria-------*/
+
 .categoria{
     background-color: transparent;
     border: none;
     color: white;
+    vertical-align: middle;
 }
+
+
+
 /*-------Menú-------*/
 .menu {
     display: inline-block;
     margin-top: 30px;
-
 }
 
 .menu a {
     color: white;
     text-decoration: none;
-    margin: 100px;
+    margin: 0 20px;
 }
 
 .menu a:hover {
@@ -67,13 +80,126 @@ header {
 
 
 .buscador {
+    text-align: center;
     padding: 5px;
     margin-right: 15px;
     border: none;
     background-color: transparent;
     border-bottom: 1px solid white;
+    
+}
+.buscador{
+    margin: 0 550px;
+    margin-right: 496px;
+    margin-left: 630px;
 }
 
+/* ---------------------------------------TEXTO FLOTANTE--------------------------------------- */
 
+.kashmir{
+    position: absolute;
+    color: white;
+    z-index: 10; 
+    top: 100px;
+    left: 35%;
+    font-size: 4em;
+}
+
+.drop02{
+    position: absolute;
+    color: white;
+    z-index: 10; 
+    top: 700px;
+    left: 40%;
+    font-size: 3em;
+}
+
+.drop2, p:first-child{
+    font-size: 70px;
+}
+
+.fechas{
+    font-size: 10px;
+}
+.fechas span:first-child{
+    margin-right: 36%;
+}
+
+/* CONTADOR */
+.date, p:nth-child(1){
+    font-size: 50px;
+    text-align: center;
+}
+
+/* DATE */
+
+.date{
+    font-size: 1em;
+}
+.date div{
+    display: inline-block;
+    margin: 0px;
+    font-size: 20px;
+}
+
+/* ---------------------------------------PAGINA 1--------------------------------------- */
+
+/* INTRODUCCION */
+.pag1{
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    color: black;
+    text-align: center;
+    margin-top: 80px;
+}
+.pag1 h1{
+    margin-top: 150px;
+}
+
+.pag1 p{
+    margin-top: 50px;
+}
+
+.pag1 h4{
+    margin-right: 1350px;
+    font-size: 1.5em;
+    margin-top: 20px;
+}
+
+/* ETIQUETAS */
+.productos {
+    text-align: center; /* Centra los elementos */
+    height: 80vh;
+    margin-top: 150px;
+}
+
+.productos div {
+    display: inline-block; 
+    width: 15%; 
+    vertical-align: middle; 
+    border: 2px solid black; 
+    margin: 0px auto;
+}
+
+.productos div img {
+    width: 100%;
+}
+
+.productos div h5 {
+    display: inline-block; 
+    vertical-align: middle;
+    margin-bottom: 10px;
+    margin-right: 100px;
+    font-size: 20px;
+    
+}
+
+.productos div .icono {
+    display: inline-block; 
+    color: black;
+    vertical-align: middle; 
+    font-weight: bold;
+   
+  
+}
 
 
