--- a/HTML/RA3/3.2/1_Transiciones/transiciones.css
+++ b/HTML/RA3/3.2/1_Transiciones/transiciones.css
@@ -111,10 +111,15 @@ li {
 
 .contacto:hover{
     border-bottom: 100px solid green;
-    height: 30px;
+    height: 100%;
     margin: 0 auto;
     background-color: green;
 }
+
+
+
+
+
 
 /*---------------COLORES Y ANIMACIONES DE CONTENEDORES----------------------------- */
 .cont1{
@@ -226,6 +231,11 @@ div p{
     
 }
 
+
+
+
+
+
 div:hover{
     font-size: 2em;
     color: white;
@@ -236,4 +246,5 @@ div:hover{
     text-align: center;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color: black;
+    overflow: hidden;
 }
